# libpag

./: CMakeLists.txt  sync_deps.sh
android/libpag/src/main/java/org/libpag/: PAGLayer.java
exporter/: CMakeLists.txt  PAGExporter.def  PAGExporterPiPL.r  deploy_to_ae.ps1
exporter/resource/mac/: PAGExporter.plugin-Info.plist
exporter/scripts/mac/: fix_qt_dependencies.sh  install_to_ae.sh
exporter/src/: main.cpp
exporter/src/aecommand/: AECommand.cpp
exporter/src/export/: ExportLayer.cpp  ExportLayer.h  ExportVerify.cpp  PAGExport.cpp
exporter/src/ui/: WindowManager.cpp
include/pag/: file.h  pag.h  types.h
include/pag/c/: pag_types.h
python/: BUILD_GUIDE.md  CMakeLists.txt  PYPAG_README.md  README.md  build.sh  environment.yml  install.sh  pag_test.py  requirements.txt  setup.py  test_full.py  test_pypag.py
python/examples/: render_frames.py  render_to_image.py  simple_render.py  text_replacement.py
python/src/: pypag.cpp  pypag_simple.cpp
python/src/bindings/: pag_file.cpp  pag_file_simple.cpp  pag_image.cpp  pag_layer.cpp  pag_player.cpp  pag_surface.cpp
python/web/: README.md  app.py
python/web/templates/: index.html
src/base/: File.cpp
src/c/: pag_types.cpp
src/codec/tags/: LayerTag.cpp
src/platform/cocoa/: PAGLayer.h
src/platform/ohos/: JPAGLayer.cpp
src/platform/web/: PAGWasmBindings.cpp
src/rendering/editing/: StillImage.cpp  StillImage.h
src/rendering/layers/: PAGFile.cpp  PAGImageLayer.cpp  PAGLayer.cpp
src/rendering/renderers/: CompositionRenderer.cpp
web/script/: rollup.config.js
web/src/: types.ts
